--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -12,11 +12,57 @@
     // HEADER SECTION
     .heading{
         text-align: center;
-        font-size: 2.5rem;
+        font-size: 2.5em;
         color: $white;
         margin: 0.5em;
         z-index: 1;
         font-weight: 500;
         text-shadow: 0 0 15px $mediumPurple;
+    }
+
+    // FORM SECTION
+    .form{
+        display: flex;
+        align-items: center;
+        width: 90%;
+        position: relative;
+
+        &__input{
+            width: 100%;
+            border-radius: 1.5em;
+            border: none;
+            outline: none;
+            padding:0.8em;
+            font-size: 1.2em;
+            transition: 0.2s;
+            // box-shadow: inset 0 0 3px $yellow;
+            
+            &:focus{
+               box-shadow:  0 0 10px 1000px rgba($color: black, $alpha: 0.5);
+            }
+        }
+
+        &__btn{
+            position: absolute;
+            right: 0;
+            z-index: 2;
+            margin-right: 0.5em;
+            padding: 0.3em 0.5em 0em;
+            font-size: 1.2em;
+            border-radius: 50%;
+            border: none;
+            background-color: $green;
+            color: #eee;
+            box-shadow: 0 0 8px rgb(80, 80, 80);
+            
+            &:hover{
+                background-color: $lightGreen;
+            }
+
+            &:active{
+                transform: scale(0.8);
+                box-shadow: 0 0 5px rgb(80, 80, 80);
+            }
+        }
     }
 }
