--- a/src/Style/Variables.scss
+++ b/src/Style/Variables.scss
@@ -12,6 +12,7 @@ $darkOrange:#FF9671;
 $orange:#FFC75F;
 $yellow:#F9F871;
 $green:#00C9A7;
+$lightGreen:#01e0bb;
 $white:white;
 $lightGrey:rgb(245, 245, 245);
 
