feature/todo-list added functionality and style

--- a/src/Style/Variables.scss
+++ b/src/Style/Variables.scss
@@ -4,17 +4,14 @@
 
 // Color variables
 $purple:#845EC2;
-$mediumPurple:#B39CD0;
-$lightPurple:#FBEAFF;
+$pink:#E7717D;
 $darkPink:#D65DB1;
-$pink:#FF6F91;
 $darkOrange:#FF9671;
-$orange:#FFC75F;
-$yellow:#F9F871;
 $green:#00C9A7;
 $lightGreen:#01e0bb;
 $white:white;
-$lightGrey:rgb(245, 245, 245);
+$grey:rgb(80, 80, 80);
+$black:black;
 
 // Font variables
 $font:"Montserrat";
