--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -2,66 +2,135 @@
 @use './index.scss';
 
 .App{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    background-color: $purple;
-    
-    // HEADER SECTION
-    .heading{
-        text-align: center;
-        font-size: 2.5em;
-        color: $white;
-        margin: 0.5em;
-        z-index: 1;
-        font-weight: 500;
-        text-shadow: 0 0 15px $mediumPurple;
-    }
+    background-image: linear-gradient(to right bottom ,$pink,$darkPink);
 
-    // FORM SECTION
-    .form{
+    .container{
         display: flex;
+        flex-direction: column;
         align-items: center;
-        width: 90%;
-        position: relative;
+        width: 100%;
+        min-height: 100vh;
 
-        &__input{
+        @media(min-width:480px)and(max-width:768px){
+            width: 80%;
+            margin: 0 auto;
+        }
+        @media(min-width:769px){
+            width: 50%;
+            margin: 0 auto;
+        }
+
+      
+        // HEADER SECTION
+        .heading{
+            text-align: center;
+            z-index: 1;
             width: 100%;
-            border-radius: 1.5em;
-            border: none;
-            outline: none;
-            padding:0.8em;
-            font-size: 1.2em;
-            transition: 0.2s;
-            // box-shadow: inset 0 0 3px $yellow;
-            
-            &:focus{
-               box-shadow:  0 0 10px 1000px rgba($color: black, $alpha: 0.5);
+            font-size: 2.5em;
+            font-weight: 500;
+            color: $white;
+            padding: 0.3em 0em;
+            text-shadow: 0 0 5px $white;
+        }
+
+        // FORM SECTION
+        .form{
+            display: flex;
+            align-items: center;
+            width: 95%;
+            position: relative;
+
+            &__input{
+                width: 100%;
+                border-radius: 1.5em;
+                border: none;
+                outline: none;
+                padding:0.8em;
+                font-size: 1.2em;
+                transition: 0.2s;
+                box-shadow: 0 0 8px $grey;
+                
+                &:focus{
+                box-shadow:  0 0 10px 1000px rgba($color: $black, $alpha: 0.4);
+                }
+            }
+
+            &__btn{
+                position: absolute;
+                right: 0;
+                z-index: 2;
+                margin-right: 0.5em;
+                padding: 0.3em 0.5em 0em;
+                font-size: 1.2em;
+                border-radius: 50%;
+                border: none;
+                background-color: $green;
+                color: #eee;
+                box-shadow: 0 0 8px $grey;
+                
+                &:hover{
+                    background-color: $lightGreen;
+                }
+
+                &:active{
+                    transform: scale(0.8);
+                    box-shadow: 0 0 5px $grey;
+                }
             }
         }
 
-        &__btn{
-            position: absolute;
-            right: 0;
-            z-index: 2;
-            margin-right: 0.5em;
-            padding: 0.3em 0.5em 0em;
-            font-size: 1.2em;
-            border-radius: 50%;
-            border: none;
-            background-color: $green;
-            color: #eee;
-            box-shadow: 0 0 8px rgb(80, 80, 80);
-            
-            &:hover{
-                background-color: $lightGreen;
-            }
+        // TODOS SECTION
+        .todos{
+            $self:".todos";
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 0.7em;
+            width: 95%;
+            margin: 1.5em 0em 2em;
 
-            &:active{
-                transform: scale(0.8);
-                box-shadow: 0 0 5px rgb(80, 80, 80);
+            &__item{
+                display: flex;
+                justify-content: space-between;
+                border-radius: 0.1em;
+                padding: 0.5em;
+                width: 100%;
+                background-color:rgba($color: $white, $alpha: 0.6);
+                box-shadow: 0 0px 10px rgba($color: $black, $alpha: 0.6);
+
+                #{$self}__input{
+                    width: 60%;
+                    padding: 0em 0.5em;
+                    font-size: 1.2em;
+                    border: none;
+                    outline: none;
+                    background-color: rgba($color: $white, $alpha: 0.7);
+                }
+
+                #{$self}__text{
+                    width: 60%;
+                    color: rgba($color: $black, $alpha: 0.65);
+                    overflow-wrap:break-word;
+                    font-size: 1.2em;
+                }
+
+                #{$self}__icons{
+                    align-self: flex-start;
+
+                    #{$self}__icon{
+                        color:rgba($color: $darkPink, $alpha: 0.5);
+                        margin-right: 0.1em;
+                        padding: 0.3em 0.3em 0em;
+                        border: 1px solid rgba($color: $white, $alpha:0);
+                        border-radius: 50%;
+
+                        &:hover{
+                            color:$darkPink;
+                            transition: ease 0.2s;
+                            border-color: $darkPink;
+                        }
+                    }
+                }
             }
         }
     }
