--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -16,7 +16,7 @@
             margin: 0 auto;
         }
         @media(min-width:769px){
-            width: 50%;
+            width: 40%;
             margin: 0 auto;
         }
 
@@ -45,7 +45,7 @@
                 border-radius: 1.5em;
                 border: none;
                 outline: none;
-                padding:0.8em;
+                padding:0.8em 3em 0.8em 0.8em;
                 font-size: 1.2em;
                 transition: 0.2s;
                 box-shadow: 0 0 8px $grey;
@@ -92,15 +92,16 @@
             &__item{
                 display: flex;
                 justify-content: space-between;
+                align-items: flex-start;
                 border-radius: 0.1em;
-                padding: 0.5em;
+                padding: 0.8em;
                 width: 100%;
                 background-color:rgba($color: $white, $alpha: 0.6);
                 box-shadow: 0 0px 10px rgba($color: $black, $alpha: 0.6);
 
                 #{$self}__input{
-                    width: 60%;
-                    padding: 0em 0.5em;
+                    width: 80%;
+                    padding: 0.3em 0.5em;
                     font-size: 1.2em;
                     border: none;
                     outline: none;
@@ -108,7 +109,8 @@
                 }
 
                 #{$self}__text{
-                    width: 60%;
+                    padding: 0.3em 0.5em;
+                    width: 80%;
                     color: rgba($color: $black, $alpha: 0.65);
                     overflow-wrap:break-word;
                     font-size: 1.2em;
@@ -116,18 +118,24 @@
 
                 #{$self}__icons{
                     align-self: flex-start;
+                    display: flex;
+                    flex-direction: column;
 
                     #{$self}__icon{
                         color:rgba($color: $darkPink, $alpha: 0.5);
                         margin-right: 0.1em;
-                        padding: 0.3em 0.3em 0em;
+                        padding: 0.3em 0.5em 0em;
                         border: 1px solid rgba($color: $white, $alpha:0);
                         border-radius: 50%;
 
-                        &:hover{
+                        &:hover,&:focus{
                             color:$darkPink;
                             transition: ease 0.2s;
                             border-color: $darkPink;
+                        }
+
+                        &:active{
+                            transform: scale(0.5);
                         }
                     }
                 }
