--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -6,9 +6,9 @@
     background-image: linear-gradient(to right bottom ,$pink,$darkPink);
 
     .container{
-        @include flex($alignItems:center,$direction:column);
         width: 100%;
         min-height: 100vh;
+        @include flex($alignItems:center,$direction:column);
 
         @media(min-width:480px)and(max-width:768px){
             width: 80%;
@@ -19,35 +19,26 @@
             margin: 0 auto;
         }
 
-      
         // HEADER SECTION
         .heading{
             z-index: 1;
-            width: 100%;
-            color: $white;
-            font-size: 2.5em;
             font-weight: 500;
-            padding: 0.3em 0em;
             text-align: center;
             text-shadow: 0 0 5px $white;
+            @include proba($width:100%,$padding:0.3em 0em,$size:$titleSize,$color:$white);
         }
 
         // FORM SECTION
         .form{
-            @include flex($alignItems:center);
-
             width: 95%;
             position: relative;
+            @include flex($alignItems:center);
 
             &__input{
-                width: 100%;
-                border-radius: 1.5em;
-                border: none;
                 outline: none;
-                padding:0.8em 3em 0.8em 0.8em;
-                font-size: 1.2em;
                 transition: 0.2s;
                 box-shadow: 0 0 8px $grey;
+                @include proba($width:100%,$padding:0.8em 3em 0.8em 0.8em,$size:$textSize, $radius:1.5em,);
                 
                 &:focus{
                 box-shadow:  0 0 10px 1000px rgba($color: $black, $alpha: 0.4);
@@ -59,13 +50,8 @@
                 right: 0;
                 z-index: 2;
                 margin-right: 0.5em;
-                padding: 0.3em 0.5em 0em;
-                font-size: 1.2em;
-                border-radius: 50%;
-                border: none;
-                background-color: $green;
-                color: #eee;
                 box-shadow: 0 0 8px $grey;
+                @include proba($padding:$iconPadding,$size:$textSize,$radius:50%,$color:#eee, $backColor:$green,);
                 
                 &:hover{
                     background-color: $lightGreen;
@@ -81,49 +67,39 @@
         // TODOS SECTION
         .todos{
             $self:".todos";
-            @include flex($alignItems:center,$direction:column);
-
             gap: 0.7em;
             width: 95%;
             margin: 1.5em 0em 2em;
+            @include flex($alignItems:center,$direction:column);
 
+            // Todos item
             &__item{
-                @include flex($alignItems:flex-start,$justifyContent:space-between);
-
-                border-radius: 0.1em;
-                padding: 0.8em;
-                width: 100%;
-                background-color:rgba($color: $white, $alpha: 0.6);
                 box-shadow: 0 0px 10px rgba($color: $black, $alpha: 0.6);
+                @include flex($alignItems:flex-start,$justifyContent:space-between);
+                @include proba($width:100%,$padding: 0.8em,$radius:0.1em,$color:#eee, $backColor:rgba($color: $white, $alpha: 0.6));
 
+                // todos input
                 #{$self}__input{
-                    width: 80%;
-                    padding: 0.3em 0.5em;
-                    font-size: 1.2em;
-                    border: none;
                     outline: none;
-                    background-color: rgba($color: $white, $alpha: 0.7);
+                    @include proba($width:80%,$padding: $inputPadding,$size:$textSize,$backColor: rgba($color: $white, $alpha: 0.7));
                 }
-
+                
+                // todos text
                 #{$self}__text{
-                    padding: 0.3em 0.5em;
-                    width: 80%;
-                    color: rgba($color: $black, $alpha: 0.65);
                     overflow-wrap:break-word;
-                    font-size: 1.2em;
+                    @include proba($width:80%,$padding: $inputPadding,$size:$textSize,$color: rgba($color: $black, $alpha: 0.65));
                 }
 
+                // todos icons
                 #{$self}__icons{
                     align-self: flex-start;
-
                     @include flex($direction:column);
 
-                    #{$self}__icon{
-                        color:rgba($color: $darkPink, $alpha: 0.5);
+                      // todos icon
+                    #{$self}__icon{                
                         margin-right: 0.1em;
-                        padding: 0.3em 0.5em 0em;
+                        @include proba($padding:$iconPadding,$radius:50%,$color: rgba($color: $darkPink, $alpha: 0.5));
                         border: 1px solid rgba($color: $white, $alpha:0);
-                        border-radius: 50%;
 
                         &:hover,&:focus{
                             color:$darkPink;
