--- a/src/Style/Variables.scss
+++ b/src/Style/Variables.scss
@@ -13,6 +13,12 @@ $white:white;
 $grey:rgb(80, 80, 80);
 $black:black;
 
+// Size variables
+$textSize:1.2em;
+$titleSize:2.5em;
+$iconPadding:0.3em 0.5em 0em;
+$inputPadding:0.3em 0.5em;
+
 // Font variables
 $font:"Montserrat";
 
